--- a/clicky-game/src/components/Guesses/style.css
+++ b/clicky-game/src/components/Guesses/style.css
@@ -1,12 +1,18 @@
-.title {
+.guesses {
     background-color: rgb(248, 142, 204);
     height: 45px;
-    width: 20%;
+    width: 28%;
     justify-content: space-around;
     align-content: flex-start;
     display: flex;
     flex-flow: row wrap;
     position: fixed;
     top: 20px;
-    margin-left: -550px;
+    margin-left: -20px;
+    z-index: 5;
+
 }
+
+/* .guessStatus {
+    padding-right: 250px;
+} */
