--- a/clicky-game/src/components/Score/style.css
+++ b/clicky-game/src/components/Score/style.css
@@ -1,17 +1,13 @@
-.guesses {
+.score {
     background-color: rgb(248, 142, 204);
     height: 45px;
-    width: 28%;
+    width: 23%;
     justify-content: space-around;
     align-content: flex-start;
     display: flex;
     flex-flow: row wrap;
     position: fixed;
     top: 20px;
-    margin-left: -20px;
-
+    margin-left: 525px;
+    z-index: 5;
 }
-
-/* .guessStatus {
-    padding-right: 250px;
-} */
