--- a/clicky-game/src/components/Title/style.css
+++ b/clicky-game/src/components/Title/style.css
@@ -1,12 +1,13 @@
-.score {
+.title {
     background-color: rgb(248, 142, 204);
     height: 45px;
-    width: 22%;
+    width: 20%;
     justify-content: space-around;
     align-content: flex-start;
     display: flex;
     flex-flow: row wrap;
     position: fixed;
     top: 20px;
-    margin-left: 530px;
+    margin-left: -550px;
+    z-index: 5;
 }
